[gd_scene load_steps=14 format=3 uid="uid://c3aungb3a2m5v"]

[ext_resource type="Script" path="res://World/Enemy/enemy.gd" id="1_3ob7m"]
[ext_resource type="Texture2D" uid="uid://88t1elds7jx0" path="res://icon.svg" id="1_na5f3"]
[ext_resource type="Resource" path="res://World/Enemy/Enemy1Movement.tres" id="2_xi7gw"]
[ext_resource type="Resource" uid="uid://rmaqbgh2xlly" path="res://World/Enemy/Enemy1Stats.tres" id="3_id0g2"]
[ext_resource type="Resource" uid="uid://dk7c2xl2gvw73" path="res://World/Player/DefaultPlayerStats.tres" id="4_5wvbj"]
[ext_resource type="Script" path="res://music/AudioPlayer/SoundQueue.gd" id="6_8ghlc"]
[ext_resource type="AudioStream" uid="uid://bv2y7fbi64ca8" path="res://music/sfx/HIT soundeffect/enemyhit.mp3" id="7_s057s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7iwr"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_603yt"]
radius = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxq50"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jnkx8"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wdkvv"]
bg_color = Color(1, 0, 0.219608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="Theme" id="Theme_p7xv3"]
ProgressBar/colors/font_color = Color(0.94902, 0.94902, 0.94902, 0)
ProgressBar/constants/outline_size = 0
ProgressBar/styles/background = SubResource("StyleBoxFlat_jnkx8")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_wdkvv")

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 17
script = ExtResource("1_3ob7m")
movement_data = ExtResource("2_xi7gw")
stats = ExtResource("3_id0g2")
playerstats = ExtResource("4_5wvbj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j7iwr")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_603yt")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=["enemy"]]
shape = SubResource("RectangleShape2D_pxq50")

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = -36.0
offset_right = 17.0
offset_bottom = -10.0
text = "Test"

[node name="Label2" type="Label" parent="."]
offset_left = -16.0
offset_top = -58.0
offset_right = 17.0
offset_bottom = -32.0
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -28.0
offset_top = -15.0
offset_right = 245.0
offset_bottom = 12.0
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_p7xv3")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(1.19209e-07, 0)
scale = Vector2(0.148437, 0.140625)
texture = ExtResource("1_na5f3")

[node name="HitSound" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_8ghlc")
Count = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HitSound"]
stream = ExtResource("7_s057s")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
